// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SayMsgForm > render > should render 1`] = `ShallowWrapper {}`;

exports[`SayMsgForm > updates > should allow switching from router 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "audio_url": "",
        "text": "What is your favorite color?",
        "type": "say_msg",
        "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`SayMsgForm > updates > should save changes 1`] = `
{
  "audio": {
    "value": "",
  },
  "message": {
    "validationFailures": [],
    "value": "What is your favorite color?",
  },
  "valid": true,
}
`;

exports[`SayMsgForm > updates > should save changes 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "audio_url": "",
        "text": "What is your favorite color?",
        "type": "say_msg",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
